# kaggle

./: .gitignore  README.md  pyproject.toml
competitions/titanic/: Titanic_Genetic_Algorithm.ipynb  nuances.py
