[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = "Kaggle's competitions notebooks"
authors = ["Lucas Marques <lucasmarquesds@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
notebook = "^7.0.3"
pandas = "^2.1.0"
numpy = "^1.25.2"
sympy = "^1.12"
matplotlib = "^3.7.3"
seaborn = "^0.12.2"
scipy = "^1.11.2"
scikit-learn = "^1.3.0"
tensorflow = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
